cc: Fix sublayer scale bug in hit testing

In hit testing, we should use the render surface screen space
transform (which doesn't have sublayer scale) instead of the
screen_space_transform stored on the transform node (which
has the sublayer scale baked in) as the clips stored in clip
tree already account for the scale.

BUG=604731
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1917043002

Cr-Commit-Position: refs/heads/master@{#389873}

Former-commit-id: 0da498c027ed0b0d1c4596892c7666afaa5a98af